Шаг 14: Получение обратной связи с помощью форм

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
-/public/uploads/photos/
-!/public/uploads/photos/.gitkeep
+/public/uploads/
+!/public/uploads/.gitkeep
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
