--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,17 @@ version: '3'
 
 services:
   database:
-    image: postgres:13-alpine
+    image: postgres:12-alpine
     environment:
       POSTGRES_USER: main
       POSTGRES_PASSWORD: main
       POSTGRES_DB: main
     ports: [5432]
+
   redis:
     image: redis:5-alpine
     ports: [6379]
+
+  rabbitmq:
+    image: rabbitmq:3.7-management
+    ports: [5672, 15672]
